2005-09-30  Sven Panne  <sven.panne@aedion.de>

	* admin/.indent.pro,examples/playfile.c, include/AL/alut.h,
	src/Makefile.am, src/alutInit.c, src/alutInternal.h,
	src/alutLoader.c, src/alutWaveform.c: Some heavy refactoring of
	the input streams and buffer data types, we are moving towards
	common OO techniques here. Not completely finished, but much
	better than before.

	* src/alutBufferData.c, src/alutInputStream.c: Added.

	* src/alutWaveform.c: Instead of the 44.1kHz 16bit PCM data, use
	11.025kHz 8-bit ISDN u-law for the "Hello, world!" sound, saving
	56kB in the resulting ALUT library.

2005-09-28  Sven Panne  <sven.panne@aedion.de>

	* examples/playfile.c, include/AL/alut.h, src/alutError.c,
	src/alutInit.c, src/alutLoader.c: Adapted to spec changes.

	* doc/alut.html: Updated list of error tokens. Replaced
	alutEnumerateSupportedFileTypes with alutGetMIMETypes. More
	reformatting and clarifications.

2005-09-27  Sven Panne  <sven.panne@aedion.de>

	* include/AL/alut.h, src/alutError.c, src/alutInit.c,
	src/alutInternal.h, src/alutLoader.c, src/alutWaveform.c: Adapted
	to spec changes. Added a few missing error checks. Improved
	SampleAttribs a bit.

	* doc/alut.css, doc/alut.html: Make descriptions of API entries
	more formal, following the usual manual page style (not finished
	yet). Added some clarifications. Changed the set of possible ALUT
	errors.

2005-09-26  Sven Panne  <sven.panne@aedion.de>

	* doc/alut.html, include/AL/alut.h, src/alutError.c,
	src/alutInit.c, src/alutInternal.h, src/alutLoader.c,
	src/alutUtil.c: Clarified and changed the ALUT error handling and
	reporting after the corresponding discussion on the mailing list.

2005-09-23  Sven Panne  <sven.panne@aedion.de>

	* admin/.cvsignore: Ignore mkinstalldirs.

	* src/alutLoader.c: Make the endianess test dynamic.

2005-09-21  Sven Panne  <sven.panne@aedion.de>

	* src/alutLoader.c: Removed evil byte-swapping. Fixed WAV loading
	(still not 100% bullet-proof, I think). Cleanup.
